correction CONTEST1_FINALE.ipynb

--- a/CONTEST1_FINALE.ipynb
+++ b/CONTEST1_FINALE.ipynb
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "the first thing i have to do is importing my dataset named train from the folder \"CONTEST 1\". The problem is to classify a set of instances of the file \"test\" with a minimum accourancy of 0,636. \n",
+        "the first thing i have to do is importing my dataset named train from the folder \"CONTEST 1\". The problem is to classify a set of instances of the file \"test\" with a minimum accouracy of 0,636. \n",
         "This dataset talk about the analysis that are made to check if a patient has a prostate cancer. So we have a series of features and a target feature \"Cancer\" that represent the results of this analysis."
       ],
       "metadata": {
